# glicko_as_ml

./: README.md  glicko.py  glicko_experiment1.py  glicko_experiment2.py  glicko_experimentation.py  glicko_test.py  pyproject.toml
